--- a/_config.yml
+++ b/_config.yml
@@ -14,21 +14,20 @@ name                     : &name "Ramon Diaz"
 description              : &description "personal description"
 url                      : https://rldiaz14.github.io/rdiaz.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "https://github.com/rldiaz14/rdiaz.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "Profile.jpg" # Profile image in /images
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Willow Street, PA"
+  employer         : "Jitsik LLC"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "rldiaz14.1@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -58,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "https://www.linkedin.com/in/rldiaz14/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
