--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,8 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+   # url: /cv/
+   url:/files/ResumeDiaz(AlgorithmDeveloper).pdf 
     
   #- title: "Guide"
     #url: /markdown/
