--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,8 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-   # url: /cv/
-   url:/files/ResumeDiaz(AlgorithmDeveloper).pdf 
+    url: /cv/
+    
     
   #- title: "Guide"
     #url: /markdown/
