--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /file/ResumeDiaz(AlgorithmDeveloper).pdf
+    url: /ResumeDiaz(AlgorithmDeveloper).pdf
     
     
   #- title: "Guide"
