--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /cv/file/ResumeDiaz.pdf
+    url: /cv/
     
     
   #- title: "Guide"
